--- a/source/app/client/styles-less/main.less
+++ b/source/app/client/styles-less/main.less
@@ -15,6 +15,7 @@
 @import "plugins/toastr.less";
 @import "plugins/morris.less";
 @import "plugins/dropzone.less";
+@import "animate.less";
 
 // Pages
 @import "global/var-pages.less";
@@ -49,4 +50,3 @@
 @import "sel_template.less";
 @import "linearicons.less";
 @import "simple-line-icons.less";
-@import "emoticon.less";
