--- a/source/app/client/views/mission/mission_member_add.html
+++ b/source/app/client/views/mission/mission_member_add.html
@@ -18,7 +18,7 @@
 <div class="modal-footer">
     <form id="search_form" novalidate>
         <div class="input-group pull-left" style="max-width:400px">
-            <input type="text" class="form-control" required ng-model="search_string" placeholder="メールアドレスやユーザー名、ユーザーIDを入力" maxlength="50" auto-focus="true">
+            <input id="txt_mm_search_string" type="text" class="form-control" required ng-model="search_string" placeholder="メールアドレスやユーザー名、ユーザーIDを入力" maxlength="50" auto-focus="true">
             <div class="input-group-btn">
                 <button type="button" class="btn btn-default"><i class="icon-magnifier"></i></button>
             </div>
