--- a/source/www/app/views/home/home_invite.html
+++ b/source/www/app/views/home/home_invite.html
@@ -10,7 +10,7 @@
         <div class="col-md-12">
             <div class="form-group">
                 <span class="icon-left icon-envelope"></span>
-                <input type="text" class="form-control" required ng-model="req.email" placeholder="メールアドレスやユーザーIDを入力" auto-focus="true">
+                <input id="invite_email" type="text" class="form-control" required ng-model="req.email" placeholder="メールアドレスやユーザーIDを入力" auto-focus="true" ng-blur="onChange()">
             </div>
         </div>
         <div class="col-md-12">
@@ -21,7 +21,10 @@
     <div class="clear"></div>
     </div>
     <div class="modal-footer">
+        <div class="input-group pull-left">
+            <button type="button" class="btn btn-default" ng-click="showInviteQR()"><img class="qr-code" ng-src="images/qr.png"> 招待QRコード</button>
+        </div>
         <button type="button" class="btn btn-default" ng-click="cancel()">取消</button>
-        <button type="submit" class="btn btn-primary" ng-click="ok()" ng-disabled="!canSubmit()">招待</button>
+        <button id="btn_invite_member_ok" type="submit" class="btn btn-primary" ng-click="ok()" ng-disabled="!canSubmit()">招待</button>
     </div>
 </form>
