エラー修正

--- a/source/phonegap/www/templates/tab-chats.html
+++ b/source/phonegap/www/templates/tab-chats.html
@@ -24,7 +24,7 @@
         </button>
     </ion-footer-bar>
 
-    <ion-footer-bar class="bar-stable bar-positive item-input-inset" ng-if="show_search_bar">
+    <ion-footer-bar id="chats_search_bar" class="bar-stable bar-positive item-input-inset" ng-if="show_search_bar">
         <button class="button button-icon icon ion-ios-search" type="submit" ng-click="open_search_chat()">メッセージも検索
         </button>
     </ion-footer-bar>
